Added Nginx configuration  - Listen on 80  - Makes redirect to HTTPS  - Pass requests from HTTPS as a proxy

--- a/src/proxy/webproxy.conf
+++ b/src/proxy/webproxy.conf
@@ -7,14 +7,18 @@ server {
 }
 
 server {
-	listen 443;
+	listen 443 ssl;
 
-    server_name _;
+	server_name _;
 
 	ssl_certificate     /proxy/server.crt;
-    ssl_certificate_key /proxy/server.key;
+	ssl_certificate_key /proxy/server.key;
 
-    location / {
-        proxy_pass https://localhost:8080;
-    }
+	location / {
+		proxy_pass https://$host:8080;
+	}
+
+	location /hello {
+		proxy_pass https://$host:8080;
+	}
 }
