Updated code after reading for third time the challenge. The HTTPS part is just on "web proxy" not in the web app.

--- a/src/proxy/webproxy.conf
+++ b/src/proxy/webproxy.conf
@@ -15,10 +15,6 @@ server {
 	ssl_certificate_key /proxy/server.key;
 
 	location / {
-		proxy_pass https://$host:8080;
-	}
-
-	location /hello {
-		proxy_pass https://$host:8080;
+		proxy_pass http://$host:8080;
 	}
 }
