--- a/src/proxy/Dockerfile
+++ b/src/proxy/Dockerfile
@@ -2,8 +2,8 @@ FROM nginx
 
 WORKDIR /proxy
 RUN mkdir -p /proxy
-COPY ./src/webapp/server.key /proxy/
-COPY ./src/webapp/server.crt /proxy/
+COPY ./src/proxy/server.key /proxy/
+COPY ./src/proxy/server.crt /proxy/
 
 RUN rm /etc/nginx/conf.d/default.conf
 COPY ./src/proxy/webproxy.conf /etc/nginx/conf.d/
