--- a/src/proxy/webproxy.conf
+++ b/src/proxy/webproxy.conf
@@ -15,6 +15,15 @@ server {
 	ssl_certificate_key /proxy/server.key;
 
 	location / {
-		proxy_pass http://$host:8080;
+		proxy_pass         http://webapp;
+		proxy_redirect     off;
+		# proxy_set_header   Host $host;
+		# proxy_set_header   X-Real-IP $remote_addr;
+		# proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+		# proxy_set_header   X-Forwarded-Host $server_name;
 	}
+}
+
+upstream webapp {
+	server webapp:8080;
 }
