--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,13 @@ services:
       dockerfile: ./src/webapp/Dockerfile
     ports:
       - "8080:8080"
+
   webproxy:
+    depends_on:
+      - webapp
     build:
       context: .
       dockerfile: ./src/proxy/Dockerfile
     ports:
       - "80:80"
       - "443:443"
-
-
